src/assets/base.css
/* color palette from <https://github.com/vuejs/theme> */
:root {
	--vt-c-white: #ffffff;
	--vt-c-white-soft: #f8f8f8;
	--vt-c-white-mute: #f2f2f2;
	--main-yellow: #ffcc00;
	--game-button-blue: #0309b4;
	--game-button-blue-hover: #000483;
	--disabled-button-bgc: #e0e0e0;
	--disabled-button-color: rgb(175, 175, 175);
	--dark-bgc: #000f52;
	--question-wrapper: #fafafa;

	--vt-c-black: #181818;
	--vt-c-black-soft: #222222;
	--vt-c-black-mute: #282828;

	--vt-c-indigo: #2c3e50;

	--vt-c-divider-light-1: rgba(60, 60, 60, 0.29);
	--vt-c-divider-light-2: rgba(60, 60, 60, 0.12);
	--vt-c-divider-dark-1: rgba(84, 84, 84, 0.65);
	--vt-c-divider-dark-2: rgba(84, 84, 84, 0.48);

	--vt-c-text-light-1: var(--vt-c-indigo);
	--vt-c-text-light-2: rgba(60, 60, 60, 0.66);
	--vt-c-text-dark-1: var(--vt-c-white);
	--vt-c-text-dark-2: rgba(235, 235, 235, 0.64);

	/* semantic color variables for this project */
	--color-background: var(--vt-c-white);
	--color-background-soft: var(--vt-c-white-soft);
	--color-background-mute: var(--vt-c-white-mute);

	--color-border: var(--vt-c-divider-light-2);
	--color-border-hover: var(--vt-c-divider-light-1);

	--color-heading: var(--vt-c-text-light-1);
	--color-text: var(--vt-c-text-light-1);

	--section-gap: 160px;

	/*School colours*/
	--school-purple: #3f2a56;
	--school-purple-drk: #18032f;
	--slate-blue: #4e5b73;
	--true-blue: #1c578a;
	--true-light: #226aa8;
	--system-gray: #f1f5fb;
	--body-grey: #333;
	--white-heat: #ffffff;
	--horizontal-rule: #ddd;
	--off-white: #f6f7f8;
	--hyperlink-blue: #2b4380;
	--hyperlink-hover: #0535d2;
	--hyperlink-visited: #7834bc;
	--hyperlink-menu: #337ab7;
	--disabled: #6c6c6c;
	--input-gradient: linear-gradient(to bottom, #e6e5e5, #fff 50%);
	--input-box-shadow: 0px 0px 8px 4px #3b99fc, 2px 5px 16px 0px #0b325e,
		0px 0px 21px 5px rgba(125, 195, 255, 0.3);
	--border-feedback-colour: var(--white-heat);
	--border-feedback-bg-colour: #369;
	--feedback-bg-colour: var(--white-heat);
	--feedback-colour: #333;
}

@media (prefers-color-scheme: dark) {
	:root {
		--color-background: var(--vt-c-black);
		--color-background-soft: var(--vt-c-black-soft);
		--color-background-mute: var(--vt-c-black-mute);

		--color-border: var(--vt-c-divider-dark-2);
		--color-border-hover: var(--vt-c-divider-dark-1);

		--color-heading: var(--vt-c-text-dark-1);
		--color-text: var(--vt-c-text-dark-2);
	}

	h1,
	h2 {
		color: #fff;
	}

	p,
	label {
		color: var(--vt-c-white) !important;
	}
}

*,
*::before,
*::after {
	box-sizing: border-box;
	margin: 0;
	font-weight: normal;
}

body {
	min-height: 100vh;
	color: var(--color-text);
	background: var(--color-background);
	transition: color 0.5s, background-color 0.5s;
	line-height: 1.6;
	font-family: Inter, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
		Oxygen, Ubuntu, Cantarell, 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
		sans-serif;
	font-size: 15px;
	text-rendering: optimizeLegibility;
	-webkit-font-smoothing: antialiased;
	-moz-osx-font-smoothing: grayscale;
}

p {
	font-size: 20px;
}

